--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <div class="main-wrapper">
+        <!-- Animation -->
         <div class="animation">
             <div class="animation__circle">
                 <div class="animation__circle-1"></div>
