création de la première page menu 'la palette'

--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
                     </div>
                 </div>
             </section>
+        </aside>
             <!-- restaurants -->
             <main class="resto">
                 <h1 id="restaurant" class="resto__title">Restaurants</h1>
                 <div class="resto__block">
-                    <a class="resto-1" href="#">
+                    <a class="resto-1" href="./palette.html">
                         <div class="resto__new">Nouveau</div>
                         <img class="resto__img" src="./images/restaurants/palette.jpg" alt="plats la palette du goût">
                         <h2 class="resto__nom">La palette du goût</h2>
@@ -121,7 +122,6 @@
                     <a class="foot__mail" href="mailto:mail.bidule@email.com">Contact</a>
                 </div>
             </footer>
-        </aside>
-    </div>
+        </div>
 </body>
 </html>
