ajout des derniers fichier html des restaurants

--- a/index.html
+++ b/index.html
@@ -79,25 +79,25 @@
                         <div class="color-heart-btn"></div>
                         <p class="color-heart-color"><i class="fa-solid fa-heart resto-heart"></i></p>
                     </a>
-                    <a class="resto-2" href="#">
+                    <a class="resto-2" href="./note.html">
                         <div class="resto__new">Nouveau</div>
-                        <img class="resto__img" src="./images/restaurants/note.jpg" alt="plats la palette du goût">
+                        <img class="resto__img" src="./images/restaurants/note.jpg" alt="plats la note enchantée">
                         <h2 class="resto__nom">La note enchantée</h2>
                         <p class="resto__lieu">Charonne</p>
                         <p class="color-heart"><i class="fa-regular fa-heart"></i></p>
                         <div class="color-heart-btn"></div>
                         <p class="color-heart-color"><i class="fa-solid fa-heart resto-heart"></i></p>
                     </a>
-                    <a class="resto-3" href="#">
-                        <img class="resto__img" src="./images/restaurants/francaise.jpg" alt="plats la palette du goût">
+                    <a class="resto-3" href="./francaise.html">
+                        <img class="resto__img" src="./images/restaurants/francaise.jpg" alt="plats la francaise">
                         <h2 class="resto__nom">À la française</h2>
                         <p class="resto__lieu">Cité Rouge</p>
                         <p class="color-heart"><i class="fa-regular fa-heart"></i></p>
                         <div class="color-heart-btn"></div>
                         <p class="color-heart-color"><i class="fa-solid fa-heart resto-heart"></i></p>
                     </a>
-                    <a class="resto-4" href="#">
-                        <img class="resto__img" src="./images/restaurants/delice.jpg" alt="plats la palette du goût">
+                    <a class="resto-4" href="./delice.html">
+                        <img class="resto__img" src="./images/restaurants/delice.jpg" alt="plats le délice des sens">
                         <h2 class="resto__nom">Le délice des sens</h2>
                         <p class="resto__lieu">Folie-Méricourt</p>
                         <p class="color-heart"><i class="fa-regular fa-heart"></i></p>
