reparation bug footer et animation 4 éme assiette. dernière petites modifications.

--- a/note.html
+++ b/note.html
@@ -52,38 +52,38 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Caviar osciètre</h3>
-                                            <p class="two-plate__type-food-txt-with">Sur blini à la farine de blé noir</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Caviar osciètre</h3>
+                                            <p class="plate__type-food-txt-with">Sur blini à la farine de blé noir</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>35€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Homard et espuma de potiron</h3>
-                                            <p class="three-plate__type-food-txt-with">Mariné aux zestes d'orange</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Homard et espuma de potiron</h3>
+                                            <p class="plate__type-food-txt-with">Mariné aux zestes d'orange</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>20€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
-                            <div class="apparition">
+                            <div class="four-apparition">
                                 <div class="plate__type-food">
                                     <a class="plate__type-food-lien" href="#">
                                         <div class="plate__type-food-txt">
@@ -122,33 +122,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Langoustine poêlée</h3>
-                                            <p class="two-plate__type-food-txt-with">Purée de patate douce</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Langoustine poêlée</h3>
+                                            <p class="plate__type-food-txt-with">Purée de patate douce</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>35€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Mijoté de queue de boeuf </h3>
-                                            <p class="three-plate__type-food-txt-with">Et riz sauvage aux zestes de citron</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Mijoté de queue de boeuf </h3>
+                                            <p class="plate__type-food-txt-with">Et riz sauvage aux zestes de citron</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>44€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
@@ -176,33 +176,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Baba au rhum revisité</h3>
-                                            <p class="two-plate__type-food-txt-with">Avec son coulis de citron</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Baba au rhum revisité</h3>
+                                            <p class="plate__type-food-txt-with">Avec son coulis de citron</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>22€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Tarte au citron meringuée</h3>
-                                            <p class="three-plate__type-food-txt-with">Déstructurée</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Tarte au citron meringuée</h3>
+                                            <p class="plate__type-food-txt-with">Déstructurée</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>23€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
