--- a/palette.html
+++ b/palette.html
@@ -52,33 +52,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Foie gras de canard mi-cuit</h3>
-                                            <p class="two-plate__type-food-txt-with">Et ses copeaux de truffe noire</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Foie gras de canard mi-cuit</h3>
+                                            <p class="plate__type-food-txt-with">Et ses copeaux de truffe noire</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>35€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Œuf au plat</h3>
-                                            <p class="three-plate__type-food-txt-with">Assaisonné à la truffe sur lit de caviar</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Œuf au plat</h3>
+                                            <p class="plate__type-food-txt-with">Assaisonné à la truffe sur lit de caviar</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>20€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
@@ -106,33 +106,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Parmentier de queue de boeuf</h3>
-                                            <p class="two-plate__type-food-txt-with">À la truffe noire sur sa purée de panais</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Parmentier de queue de boeuf</h3>
+                                            <p class="plate__type-food-txt-with">À la truffe noire sur sa purée de panais</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>35€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Filet de turbot</h3>
-                                            <p class="three-plate__type-food-txt-with">Aux agrumes</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Filet de turbot</h3>
+                                            <p class="plate__type-food-txt-with">Aux agrumes</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>44€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
@@ -160,33 +160,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Macaron au chocolat d'exception </h3>
-                                            <p class="two-plate__type-food-txt-with">Et glace à la vanille de Madagascar</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Macaron au chocolat d'exception </h3>
+                                            <p class="plate__type-food-txt-with">Et glace à la vanille de Madagascar</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>22€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Mousse au chocolat</h3>
-                                            <p class="three-plate__type-food-txt-with">Au piment d'Espelette et à la truffe noire</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Mousse au chocolat</h3>
+                                            <p class="plate__type-food-txt-with">Au piment d'Espelette et à la truffe noire</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>23€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
