--- a/delice.html
+++ b/delice.html
@@ -52,33 +52,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Bouchée de homard croustillant </h3>
-                                            <p class="two-plate__type-food-txt-with">Et sa farandole de petits légumes</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Bouchée de homard croustillant </h3>
+                                            <p class="plate__type-food-txt-with">Et sa farandole de petits légumes</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>35€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Velouté de cèpes </h3>
-                                            <p class="three-plate__type-food-txt-with">Aux truffes</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Velouté de cèpes </h3>
+                                            <p class="plate__type-food-txt-with">Aux truffes</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>20€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
@@ -106,33 +106,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Langouste rôtie</h3>
-                                            <p class="two-plate__type-food-txt-with">Et ses légumes de saison</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Langouste rôtie</h3>
+                                            <p class="plate__type-food-txt-with">Et ses légumes de saison</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>35€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Côte de boeuf Angus</h3>
-                                            <p class="three-plate__type-food-txt-with">Et sa purée de panais</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Côte de boeuf Angus</h3>
+                                            <p class="plate__type-food-txt-with">Et sa purée de panais</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>44€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
@@ -160,33 +160,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Crème brulée</h3>
-                                            <p class="two-plate__type-food-txt-with">Revisitée</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Crème brulée</h3>
+                                            <p class="plate__type-food-txt-with">Revisitée</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>22€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Tiramisu</h3>
-                                            <p class="three-plate__type-food-txt-with">À la noisette</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Tiramisu</h3>
+                                            <p class="plate__type-food-txt-with">À la noisette</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>23€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
