--- a/francaise.html
+++ b/francaise.html
@@ -52,33 +52,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Velouté de légumes d'antan</h3>
-                                            <p class="two-plate__type-food-txt-with">Carotte, panais, topinambour</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Velouté de légumes d'antan</h3>
+                                            <p class="plate__type-food-txt-with">Carotte, panais, topinambour</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>35€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Soupe à l'oignon</h3>
-                                            <p class="three-plate__type-food-txt-with">Revisitée</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Soupe à l'oignon</h3>
+                                            <p class="plate__type-food-txt-with">Revisitée</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>20€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
@@ -106,33 +106,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Magret de canard</h3>
-                                            <p class="two-plate__type-food-txt-with">Et parmentier de pommes de terre</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Magret de canard</h3>
+                                            <p class="plate__type-food-txt-with">Et parmentier de pommes de terre</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>35€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Pigeonneau d’Ille-et-Vilaine</h3>
-                                            <p class="three-plate__type-food-txt-with">Sur son lit de gnocchis aux légumes</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Pigeonneau d’Ille-et-Vilaine</h3>
+                                            <p class="plate__type-food-txt-with">Sur son lit de gnocchis aux légumes</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>44€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
@@ -160,33 +160,33 @@
                                 </div>
                             </div>
                             <div class="two-apparition">
-                                <div class="two-plate__type-food">
-                                    <a class="two-plate__type-food-lien" href="#">
-                                        <div class="two-plate__type-food-txt">
-                                            <h3 class="two-plate__type-food-txt-title">Fondant au chocolat</h3>
-                                            <p class="two-plate__type-food-txt-with">Revisité</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Fondant au chocolat</h3>
+                                            <p class="plate__type-food-txt-with">Revisité</p>
                                         </div>
-                                        <div class="two-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>22€</strong></p>
                                         </div>
-                                        <div class="two-plate__btn-anim"></div>
-                                        <div class="two-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="three-apparition">
-                                <div class="three-plate__type-food">
-                                    <a class="three-plate__type-food-lien" href="#">
-                                        <div class="three-plate__type-food-txt">
-                                            <h3 class="three-plate__type-food-txt-title">Millefeuille croustillant</h3>
-                                            <p class="three-plate__type-food-txt-with">Myrtilles et pâte d’amande</p>
+                                <div class="plate__type-food">
+                                    <a class="plate__type-food-lien" href="#">
+                                        <div class="plate__type-food-txt">
+                                            <h3 class="plate__type-food-txt-title">Millefeuille croustillant</h3>
+                                            <p class="plate__type-food-txt-with">Myrtilles et pâte d’amande</p>
                                         </div>
-                                        <div class="three-plate__type-food-price">
+                                        <div class="plate__type-food-price">
                                             <p><strong>23€</strong></p>
                                         </div>
-                                        <div class="three-plate__btn-anim"></div>
-                                        <div class="three-plate__type-food-check"></div>
+                                        <div class="plate__btn-anim"></div>
+                                        <div class="plate__type-food-check"></div>
                                         <i class="fa-solid fa-circle-check"></i>
                                     </a>
                                 </div>
