--- a/note.html
+++ b/note.html
@@ -16,14 +16,17 @@
     </head>
     <body>
         <div class="main-wrapper">
+            <!-- en-tête de la page / ajout d'un bouton retour à l'accueil -->
             <header class="heading">
                 <a href="./index.html" class="heading__retour-acceuil">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
                 <img class="heading__logo" src="./images/logo/ohmyfood.png" alt="logo de 'ho my food'">
             </header>
+            <!-- Partie principale -->
             <main class="menu">
-                <img class="menu__image" src="./images/restaurants/menu/note-menu.jpg" alt="photo plat la palette">
+                <img class="menu__image" src="./images/restaurants/menu/note-menu.jpg" alt="photo plat la note enchantée">
+                <!-- nom du restaurant et option "j'aime" -->
                 <section class="menu-plats">
                     <div class="menu-plats__title">
                         <h1>La note enchantée</h1>
@@ -32,6 +35,7 @@
                         <p class="color-heart-color-resto"><i class="fa-solid fa-heart resto-heart"></i></p>
                     </div> 
                     <section class="plate">
+                         <!-- partie Entrée -->
                         <div class="plate__type">
                             <h2 class="plate__type-dish">ENTRÉES</h2>
                             <p class="plate__type-under"></p>
@@ -102,6 +106,7 @@
                         </div>
                     </section>  
                     <section class="plate">
+                         <!-- Partie PLats -->
                         <div class="plate__type">
                             <h2 class="plate__type-dish">PLATS</h2>
                             <p class="plate__type-under"></p>
@@ -156,6 +161,7 @@
                         </div>
                     </section>  
                     <section class="plate">
+                        <!-- Partie Déssert -->
                         <div class="plate__type">
                             <h2 class="plate__type-dish">DESSERT</h2>
                             <p class="plate__type-under"></p>
