--- a/note.html
+++ b/note.html
@@ -215,6 +215,7 @@
                             </div>
                         </div>
                     </section> 
+                     <!-- bouton commander -->
                     <a href="#" class="btn-commande">
                         <p>Commander</p>
                     </a>
