--- a/palette.html
+++ b/palette.html
@@ -199,6 +199,7 @@
                             </div>
                         </div>
                     </section> 
+                    <!-- bouton commander -->
                     <a href="#" class="btn-commande">
                         <p>Commander</p>
                     </a>
